# rocketmq-client-rust

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
proto/apache/rocketmq/v1/: admin.proto  definition.proto  service.proto
proto/apache/rocketmq/v2/: service.proto
proto/google/rpc/: error_details.proto
src/: client.rs  credentials.rs  error.rs  lib.rs  pb.rs  rocketmq.rs  service.rs
