[package]
name = "rocketmq-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.0", features = ["full"]}

[build-dependencies]
tonic-build = "0.6"